--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 header {
-  background-color: #444;
+  background-color: #666;
   color: #fff;
   padding: 20px;
 }
@@ -8,11 +8,16 @@ h1 {
   font-size: 50px;
   margin-left: 30px;
   font-style: italic;
-  color: #00FFFF
+  color: #001eff;
 }
 
 p {
   font-size: 16px;
   font-weight: bold;
-  color: #DC143C
+  color: #099c00;
+}
+
+main li {
+    color: #0016ff;
+    margin-top: 10px;
 }
